Don't crash if we run list(FIND) without a find element

BUG: 319464